--- a/index.html
+++ b/index.html
@@ -2,16 +2,32 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThinkSense Labs</title>
-    <meta name="description" content="ThinkSense Labs, IoT and Embedded Systems experiments, notes, and demos." />
-    <meta name="theme-color" content="#0b0b0f" />
-    <link rel="icon" href="/logo.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ThinkSense Labs</title>
+  <meta name="description" content="ThinkSense Labs, IoT and Embedded Systems experiments, notes, and demos." />
+  <link rel="icon" href="/logo.svg" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://thinksense.example" />
+
+  <!-- Social (swap og:image when you have a cover.png) -->
+  <meta property="og:title" content="ThinkSense Labs" />
+  <meta property="og:description" content="Embedded systems, IoT, and clever contraptions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://thinksense.example" />
+  <meta property="og:image" content="/logo.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ThinkSense Labs" />
+  <meta name="twitter:description" content="Embedded systems, IoT, and clever contraptions." />
+  <meta name="twitter:image" content="/logo.svg" />
+
+  <!-- Fonts (fast + safe) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
